# vman3_ml

./: .gitignore  LICENSE  README.md  generate_proposal.py  predict.py  pyproject.toml  requirements.txt  setup.py  test01_og.xlsx  test1_Og.xlsx  train.py  ~$test1_Og.xlsx
ccva_ml/: __init__.py  core_bkp.py  instrument_dictionary.py  mapcauselist.py  narrative.py  prediction.py  processing.py  requirements.txt  setup.py  training.py  training_2.py
reports/: CCVA_ML_Funding_Proposal.docx  manuscript_va_dqa_indicators.docx  manuscript_va_dqa_indicators.md
vman_ml/: label_audit.py  mapcauselist.py  prediction.py  processing.py  setup.py  training.py
